2006-01-27  Thomas Liske  <tholi@fsr.et.tu-dresden.de>

	* fish.c, xdirentry.h: Fix 2 GB file size limit for fish.

2006-01-27  Roland Illig  <roland.illig@gmx.de>

	* utilvfs.c (is_year): The range of valid year numbers is
	restricted to 1970 .. 2015 to reduce the number of parsing
	errors.

2006-01-25  Jindrich Makovicka  <makovick@kmlinux.fjfi.cvut.cz>

	* xdirentry.h (LS_LINEAR_PREOPEN): New macro definition.
	* direntry.c (vfs_s_open): When opening a file in linear mode,
	defer the actual open operation until the first read call.
	(vfs_s_read): When reading in linear mode, open the file
	on the first read operation.
	(vfs_s_lseek): When in linear mode, make sure that seeking is
	allowed only before the first read operation.
	* ftpfs.c (ftpfs_ctl): Make the code aware of LS_LINEAR_PREOPEN.
	* fish.c (fish_ctl): Likewise.

2006-01-24  Pavel Tsekov  <ptsekov@gmx.net>

	* ftpfs.c (ftpfs_dir_load): Fix a bad ERRNOR call.

2006-01-23  Pavel Tsekov  <ptsekov@gmx.net>

	* ftpfs.c (ftpfs_first_cd_then_ls): Enable this functionality
	by default.

2006-01-18  Pavel Tsekov  <ptsekov@gmx.net>

	* tar.c (tar_read_header): Skip over pax extended header and
	global extended header records.

2005-11-15  Pavel Roskin  <proski@gnu.org>

	* samba/lib/netmask.c: Include <stdlib.h> for exit() and
	<string.h> for memcpy().

2005-11-11  Pavel Roskin  <proski@gnu.org>

	* samba/lib/netmask.c: Add get_netmask() prototype for the dummy
	version.

2005-11-10  Pavel Roskin  <proski@gnu.org>

	* samba/lib/util_sock.c: Fix warnings on 64-bit systems.

	* mcserv.c (get_client): Fix gcc 4 warning.

	* smbfs.c: Remove redundant ipzero declaration.

2005-10-19  Leonard den Ottolander  <leonard den ottolander nl>

	* fish.c (fish_dir_load, fish_linear_start): Get numerical gid/uids
	from ls to avoid wrong parsing of user/group names containing white
	space.

2005-10-09  Boris Belitsky  <?>

	* ftpfs.c (ftpfs_command): Fix "Nowhere to fallback to" warning