@@ -1,3 +1,8 @@
+2006-01-27  Leonard den Ottolander <leonard den ottolander nl>
+
+	* utilvfs.c: Do not parse more than 3 date elements to avoid file
+	name parsing errors.
+
 2006-01-27  Thomas Liske  <tholi@fsr.et.tu-dresden.de>
 
 	* fish.c, xdirentry.h: Fix 2 GB file size limit for fish.
